Adjust vertical alignment on Artist names after bug fix

--- a/app/assets/stylesheets/components/tracks.scss
+++ b/app/assets/stylesheets/components/tracks.scss
@@ -163,7 +163,6 @@
           font-size: 11px;
         }
         .artist_container {
-          padding-top: 3px;
           width: 50px;
           overflow-x: hidden;
           white-space: nowrap;
